# Nengine

./: CMakeLists.txt  CMakePresets.json  README.md
Data/: Levels.txt
Data/SpriteSheets/: PengoCharactersSprites.tga  Untitled-1.psd
Game/: CMakeLists.txt  EventIDs.h  Main.cpp  Variables.h
Game/Scripts/: PengoStateComponent.cpp  PengoStateComponent.h
Game/Scripts/Components/: BlockComponent.cpp  BlockComponent.h  EnemyStateComponent.cpp  EnemyStateComponent.h  PengoGridComponent.cpp  PengoGridComponent.h  PengoStateComponent.cpp  PengoStateComponent.h
Game/Scripts/Level/: EnemyManager.cpp  EnemyManager.h  LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h
Game/Scripts/States/: PengoIdleState.cpp  PengoIdleState.h  PengoState.cpp  PengoState.h  PengoWalkingStates.cpp  PengoWalkingStates.h  PushingState.cpp  PushingState.h
Game/Scripts/States/Enemies/: EnemyPunchingState.cpp  EnemyPushedState.cpp  EnemyPushedState.h  EnemyRunningState.cpp  EnemySpawnState.cpp  EnemySquished.cpp  EnemySquishedState.cpp  EnemySquishedState.h  EnemyState..cpp  EnemyState.cpp  EnemyState.h  EnemyWalkingState.cpp  EnemyWalkingState.h
Minigin/: AnimatorComponent.cpp  AnimatorComponent.h  BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  ControllerInput.cpp  ControllerInput.h  FPSComponent.cpp  FPSComponent.h  GameObject.cpp  GameObject.h  HealthComponent.cpp  HealthComponent.h  HitboxComponent.cpp  HitboxComponent.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  RotateComponent.cpp  RotateComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScoreComponent.cpp  ScoreComponent.h  State.h  Tags.h  TextComponent.cpp  TextComponent.h  (+5 more)
Minigin/Commands/: AddScoreCommand.cpp  AddScoreCommand.h  Command.h  EventCommand.cpp  EventCommand.h  MoveCommand.cpp  MoveCommand.h
Minigin/Components/: GridComponent.cpp  GridComponent.h  ObserverComponent.cpp  ObserverComponent.h  StateComponent.cpp  StateComponent.h
Minigin/Events/: Event.h  Subject.cpp  Subject.h
Minigin/Observers/: HealthDisplay.cpp  HealthDisplay.h  Observer.h  ScoreDisplay.cpp  ScoreDisplay.h  SoundObserver.cpp  SoundObserver.h
Minigin/Sound/: ISoundService.h  NullSoundService.h  SDLMixerSoundService.cpp  SDLMixerSoundService.h  ServiceLocator.cpp  ServiceLocator.h
